<resources>
    <string name="app_name">HoefsmidEnjo</string>

    <string name="item_toevoegen">Item toevoegen</string>
    <string name="afspraak_maken">Afspraak maken</string>
    <string name="kalender_raadplegen">Kalender raadplegen</string>
    <string name="rekening_bekijken">Factuur bekijken</string>
    <string name="rekening">Factuur</string>
    <string name="klanten">Klanten</string>
    <string name="item_beheren">Item beheren</string>
    <string name="klant_beheren">Klant beheren</string>
    <string name="items">Items</string>
    <string name="kalender">Kalender</string>
    <string name="klant_toevoegen">Klant toevoegen</string>
    <string name="home">home</string>
    <string name="profile">Profiel</string>
    <string name="email">Email</string>
    <string name="telefoon">Telefoon</string>
    <string name="naam">Naam</string>
    <string name="titel">Titel</string>
    <string name="uur">Uur</string>
    <string name="filter_voornaam">Filter voornaam…</string>
    <string name="filter_achternaam">Filter achternaam</string>
    <string name="_01">01</string>
    <string name="_02">02</string>
    <string name="_03">03</string>

    <string name="dinsdag_2_januari">Dinsdag 2 Januari</string>
    <string name="ma">Ma</string>
    <string name="di">Di</string>
    <string name="wo">Wo</string>
    <string name="achternaam">Achternaam</string>
    <string name="voornaam">Voornaam</string>
    <string name="nieuwe_klant"><u>Nieuwe Klant</u></string>
    <string name="nieuwItem"><u>Nieuw Item</u></string>

    <string name="filter_naam">Filter naam</string>
    <string name="name">Name</string>
    <string name="_5_00">5.00€</string>
    <string name="rekening_van_voornaam_achternaam_op_datum">Factuur van voornaam achternaam op datum</string>
    <string name="st">€ / st</string>
    <string name="aantal">Aantal</string>
    <string name="totale_prijs">totale prijs</string>
    <string name="klant">Klant</string>
    <string name="datum">Datum</string>
    <string name="item">Item</string>
    <string name="totaal">Totaal</string>
    <string name="verwijder">Verwijder</string>
    <string name="tijd">Tijd</string>
    <string name="rekening_toevoegen">Factuur toevoegen</string>
    <string name="voeg_item_toe">Voeg Item Toe</string>
    <string name="voeg_rekening_toe">Voeg factuur toe</string>
    <string name="Afspraak_maken2"><u>Afspraak maken</u></string>
    <string name="afspraak_titel">Afspraak titel</string>
    <string name="bevestig_afspraak">Bevestig afspraak</string>
    <string name="locatie">Locatie</string>
    <string name="prijs">Prijs</string>
    <string name="keer_terug_naar_vorige_pagina">keer terug naar vorige pagina</string>
    <string name="datum_legen">datum legen</string>
    <string name="naar_detail">naar detail</string>
    <string name="voornaam_achternaam">Voornaam achternaam</string>
    <string name="verwijder_laatste">verwijder laatste</string>
    <string name="ok">OK</string>
    <string name="xxxx">xxxx</string>
    <string name="voeg_gebruiker_toe">Voeg gebruiker toe</string>
    <string name="phonenumber">phonenumber</string>
    <string name="prijs_per_stuk">prijs per stuk</string>
    <string name="verwijder_klant">Verwijder klant</string>
    <string name="dateformat">Datum dd/MM/yyyy</string>
    <string name="priceformat">%.2f €</string>
    <string name="username">Gebruikersnaam</string>
    <string name="Password">Wachtwoord</string>
    <string name="logo">Logo</string>
    <string name="LogIn">Log in</string>
    <string name="us"></string>
    <string name="pass"></string>
    <string name="usernameEmpty">Gebruikersnaam kan niet leeg zijn</string>
    <string name="PasswordEmpty">Wachtwoord kan niet leeg zijn</string>

</resources>