<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:theme="@style/datepicker">

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="@color/navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/planning"
            android:layout_width="match_parent"
            android:layout_height="429dp"
            android:layout_marginTop="12dp"
            android:paddingBottom="30dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5" />

        <View
            android:id="@+id/viewTomorrow"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="76dp"
            android:background="@color/textGold"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/viewToday"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewToday"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="56dp"
            android:background="@color/textGold"
            app:layout_constraintEnd_toEndOf="@+id/Today"
            app:layout_constraintStart_toStartOf="@+id/Today"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewYesterday"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="24dp"
            android:background="@color/textGold"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@+id/Today"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/yesterday_day"
            android:layout_width="70dp"
            android:layout_height="19dp"
            android:gravity="center_horizontal|top"
            android:text="@string/ma"
            android:textColor="@color/navigation"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/yesterday_date"
            app:layout_constraintStart_toStartOf="@+id/viewYesterday" />

        <TextView
            android:id="@+id/yesterday_date"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/_01"
            android:textColor="@color/navigation"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/Today"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tomorrow_day"
            android:layout_width="70dp"
            android:layout_height="19dp"
            android:gravity="center_horizontal|top"
            android:text="@string/wo"
            android:textColor="@color/navigation"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/tomorrow_date"
            app:layout_constraintStart_toStartOf="@+id/viewTomorrow" />

        <TextView
            android:id="@+id/Today"
            android:layout_width="91dp"
            android:layout_height="80dp"
            android:layout_marginTop="56dp"
            android:gravity="center"
            android:text="@string/_02"
            android:textColor="@color/black"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/today_day"
            android:layout_width="91dp"
            android:layout_height="29dp"
            android:gravity="center_horizontal|top"
            android:text="@string/di"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/viewToday"
            app:layout_constraintEnd_toEndOf="@+id/Today"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/Today" />

        <TextView
            android:id="@+id/tomorrow_date"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="24dp"
            android:gravity="center"
            android:text="@string/_03"
            android:textColor="@color/navigation"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/viewToday"
            app:layout_constraintTop_toTopOf="@+id/viewTomorrow" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/dinsdag_2_januari"
            android:textColor="@color/textGold"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>