<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

<data>
    <variable
        name="RelUserEvent"
        type="com.enjo.hoefsmidenjo.database.relations.RelUserEvent" />
</data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <View
            android:id="@+id/Card"
            android:layout_width="302dp"
            android:layout_height="100dp"

            android:background="@color/textGold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_max="300dp" />

        <View
            android:id="@+id/cardheader"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:background="#B1981B"
            app:layout_constraintEnd_toEndOf="@id/Card"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/Card"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_max="300dp" />

        <TextView
            android:id="@+id/event_titel"
            android:layout_width="299dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/titel"
            app:layout_constraintStart_toStartOf="@+id/Card"
            app:layout_constraintTop_toTopOf="@+id/Card" />

        <TextView
            android:id="@+id/event_client"
            android:layout_width="290dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:gravity="start|center_vertical"
            android:text="@string/klant"
            app:layout_constraintStart_toStartOf="@+id/Card"
            app:layout_constraintTop_toTopOf="@+id/Card" />

        <TextView
            android:id="@+id/event_location"
            android:layout_width="290dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:gravity="start|center_vertical"
            android:text="@string/locatie"
            app:layout_constraintStart_toStartOf="@+id/Card"
            app:layout_constraintTop_toBottomOf="@+id/event_client" />

        <TextView
            android:id="@+id/event_hour"
            android:layout_width="88dp"
            android:layout_height="29dp"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:text="@string/uur"
            app:layout_constraintStart_toStartOf="@+id/cardheader"
            app:layout_constraintTop_toTopOf="@+id/Card" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
