<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="RelInvoiceLineInvoiceItem"
            type="com.enjo.hoefsmidenjo.database.relations.RelInvoiceLineInvoiceItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:minHeight="60dp">

        <TextView
            android:id="@+id/line_name"
            android:layout_width="91dp"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:text="@string/naam"
            android:textColor="@color/textGold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/line_amount"
            android:layout_width="59dp"
            android:layout_height="23dp"
            android:layout_marginTop="24dp"
            android:gravity="end"
            android:text="@string/aantal"
            android:textColor="@color/textGold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/line_unitprice"
            android:layout_width="93dp"
            android:layout_height="23dp"
            android:layout_marginTop="24dp"
            android:gravity="end"
            android:text="@string/prijs_per_stuk"
            android:textColor="@color/textGold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.587"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/line_total"
            android:layout_width="79dp"
            android:layout_height="23dp"
            android:layout_marginTop="24dp"
            android:gravity="end"
            android:text="@string/prijs"
            android:textColor="@color/textGold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.94"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view8"
            android:layout_width="320dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
