<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/darkbackground"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@color/navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/itemname"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/naam"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelName" />

    <EditText
        android:id="@+id/Prijs"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:inputType="number"
        android:hint="@string/prijs"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/itemname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/itemname"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/naam"
        android:theme="@style/clientlabel"
        app:layout_constraintStart_toStartOf="@+id/itemname"
        app:layout_constraintTop_toBottomOf="@+id/darkbackground" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/prijs"
        android:theme="@style/clientlabel"
        app:layout_constraintStart_toStartOf="@+id/itemname"
        app:layout_constraintTop_toBottomOf="@+id/itemname" />

    <Button
        android:id="@+id/additem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/confirmbutton"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/item_toevoegen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Prijs" />

    <TextView
        android:id="@+id/headtext"
        android:layout_width="409dp"
        android:layout_height="192dp"
        android:gravity="center"
        android:text="@string/nieuwItem"
        android:textColor="@color/textGold"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/darkbackground"
        app:layout_constraintStart_toStartOf="@+id/darkbackground"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>